[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2s_simd = "1.0.1"
num = { version = "0.4.0", features = ["rand"] }
rand = "0.8.0"

[dev-dependencies]
cbindgen = "0.24.3"
